Added new files/new tweaks

--- a/design/add_experience.html
+++ b/design/add_experience.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header>
-	<div class="constrain-width">
+	<div class="header-wrap">
 		<div id="logo">Come Play Learn</div>
 		<div id="facebook-connect"></div>
 		<div id="service-list">List your activity</div>
@@ -21,6 +21,7 @@
 	</div>
 	</header>
 	<div id="wrapper">
+		<div class="wrapper-constrain">
 		<div class="content">
 			<h2>Add listing form</h2><!-- we can change this title based on the niche-->
 			<div id="form-instructions">
@@ -140,10 +141,11 @@
 						</div>
 					<div class="row">
 				</fieldset>       	
-				<p class="eula">Capicola meatloaf t-bone, ham hock tenderloin corned beef bresaola boudin jerky. Beef venison meatball tri-tip andouille pork chop flank ham hock pork belly turducken pork loin. Ham turkey beef, sirloin hamburger meatloaf kielbasa leberkäse strip steak t-bone tenderloin meatball pork swine short ribs. Sirloin andouille brisket kielbasa pork loin, pig filet mignon ham tail pastrami pork leberkäse capicola. Corned beef pork boudin capicola. Turkey jerky ground round meatloaf. Sausage shankle ball tip shank meatball venison chicken short ribs flank beef ribs\w.
+				<p class="secondary">Capicola meatloaf t-bone, ham hock tenderloin corned beef bresaola boudin jerky. Beef venison meatball tri-tip andouille pork chop flank ham hock pork belly turducken pork loin. Ham turkey beef, sirloin hamburger meatloaf kielbasa leberkäse strip steak t-bone tenderloin meatball pork swine short ribs. Sirloin andouille brisket kielbasa pork loin, pig filet mignon ham tail pastrami pork leberkäse capicola. Corned beef pork boudin capicola. Turkey jerky ground round meatloaf. Sausage shankle ball tip shank meatball venison chicken short ribs flank beef ribs.
 				</p>
-				<input type="submit" class="go-button" value="View listing">
+				<input type="submit" value="View listing">
 			</form>
+		</div>
 		</div>
 	</div>
 	<footer>
@@ -157,27 +159,4 @@
 	</footer>
 </body>
 </html>
-
-<!-- -- title for listing
--- text area for description
--- upload images ("of your cooking, the setting, yourself. anything that helps tell your story.")
--- link to video (or embedding)
--- geo location (need to represent if it's (a) stationary, (b) has a delivery service area...
-   enter address and radius, we pull geo location from Google and display map.
--- time availability widget - use calendar and enable them to mark multiple dates.   
-
-    as well as general times, like "lunchtime weekdays" (these can be check boxes)
-
--- toggle: listing "active" / "inactive"  
--- tags
--- field to classify type of experience: "delivery, take out, eat in" (checkboxes)
--- how many people? (they will have limited capacity) - drop down menu
--- price   
--- save
--- listing preview with 'edit' and 'submit' buttons
-(if user clicks edit go back one step
-if user clicks submit then the listing goes live but admin gets an email to review listing!)
--->
-
-
 
