--- a/design/add_experience.html
+++ b/design/add_experience.html
@@ -20,16 +20,18 @@
 		<div class="clear"></div>
 	</div>
 	</header>
-	<div id="wrapper">
-		<div class="wrapper-constrain">
-		<div class="content">
-			<h2>Add listing form</h2><!-- we can change this title based on the niche-->
-			<div id="form-instructions">
+	<div class="content-body">
+		<div class="main-content">
+		<div class="command-bar">
+			This can be hidden if not in use
+		</div>
+			<h1>Add listing form</h1>
+			<div class="two-col-right">
 				<h3>Welcome!</h3>
 				<p>Hamburger corned beef turkey, fatback pancetta leberkäse pork chop pork ham hock short ribs. Rump tail pork chop pork meatloaf. Beef short loin rump, capicola leberkäse drumstick chicken short ribs. Capicola jerky tail hamburger tri-tip, kielbasa sirloin brisket frankfurter swine. Shankle turducken bresaola ground round pig. Meatball sausage chuck, strip steak fatback leberkäse sirloin boudin shankle filet mignon tenderloin kielbasa. Ball tip boudin pancetta shank, leberkäse spare ribs pork chop strip steak bacon sausage swine turducken flank.</p>
 				<p>Shoulder andouille short loin chicken venison. Pork loin chicken sausage, hamburger t-bone flank beef ribs kielbasa drumstick turducken. Pastrami sausage shoulder t-bone, filet mignon prosciutto leberkäse drumstick short loin flank spare ribs meatball chicken. Short ribs ball tip short loin t-bone, drumstick boudin kielbasa capicola shankle tongue beef tri-tip. Shankle short loin frankfurter, fatback jerky pancetta bacon ham hock tenderloin leberkäse kielbasa t-bone boudin ham brisket. Meatloaf shank bacon, rump ham venison swine fatback turkey corned beef jowl brisket kielbasa. Tongue tri-tip capicola, t-bone ribeye kielbasa flank chicken brisket jerky spare ribs meatball.</p>
 			</div>
-
+		<div class="two-col-left">
 			<form action="#" method="POST" enctype="multipart/form-data">
 				<fieldset>
 					<h3>Describe your offering</h3>
@@ -149,7 +151,7 @@
 		</div>
 	</div>
 	<footer>
-		<div class="constrain-width">
+		<div class="footer-constrain">
 			<ul class="footer-nav">
 				<li>About</li>
 				<li>Contact</li>
