--- a/design/list.html
+++ b/design/list.html
@@ -34,10 +34,38 @@
 					<input type="submit" value="search" />
 				</form>
 			</div>
+
+			<div class="search-result">
+				<h4>This is an activity</h4>
+				<div class="secondary">Mary K. at San Francisco</div>
+				<div class="price">$25</div>
+			</div>
+			<div class="search-result">
+				<h4>This is an activity</h4>
+				<div class="secondary">Mary K. at San Francisco</div>
+				<div class="price">$25</div>
+			</div>
+			<div class="search-result">
+				<h4>This is an activity</h4>
+				<div class="secondary">Mary K. at San Francisco</div>
+				<div class="price">$25</div>
+			</div>
+			<div class="search-result">
+				<h4>This is an activity</h4>
+				<div class="secondary">Mary K. at San Francisco</div>
+				<div class="price">$25</div>
+			</div>
+			<div class="search-result">
+				<h4>This is an activity</h4>
+				<div class="secondary">Mary K. at San Francisco</div>
+				<div class="price">$25</div>
+			</div>
+
+
 		</div>
 	</div>
 	<footer>
-		<div class="constrain-width">
+		<div class="footer-constrain">
 			<ul class="footer-nav">
 				<li>About</li>
 				<li>Contact</li>
