Updated some styles

--- a/design/list.html
+++ b/design/list.html
@@ -1,70 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
+	<head>
+		<meta charset="utf-8">
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script src="js/textwrap.plugin.js"></script>
-	<script src="js/main.js"></script>
-	<script type="text/javascript" src="http://use.typekit.com/qzv2oav.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-	<link rel="stylesheet" href="css/style.css">
-	<title>Add a new listing</title>    
-</head>
-<body>
-	<header>
-	<div class="header-wrap">
-		<div id="logo">Come Play Learn</div>
-		<div id="facebook-connect"></div>
-		<div id="service-list">List your activity</div>
-		<div class="clear"></div>
-	</div>
-	</header>
-	<div id="wrapper">
-		<div class="wrapper-constrain">
-			<div id="search-box">
-				<div class="search-box-tagline">
-					A whole new experience for your child starts here
-				</div>
-				<form class="search-box-form">
-					I want to find
-					<input class="shorter" type="text" />
-					near
-					<input class="short" type="text" />
-					<input type="submit" value="search" />
-				</form>
-			</div>
-
-			<div class="search-result">
-				<h4>This is an activity</h4>
-				<div class="secondary">Mary K. at San Francisco</div>
-				<div class="price">$25</div>
-			</div>
-			<div class="search-result">
-				<h4>This is an activity</h4>
-				<div class="secondary">Mary K. at San Francisco</div>
-				<div class="price">$25</div>
-			</div>
-			<div class="search-result">
-				<h4>This is an activity</h4>
-				<div class="secondary">Mary K. at San Francisco</div>
-				<div class="price">$25</div>
-			</div>
-			<div class="search-result">
-				<h4>This is an activity</h4>
-				<div class="secondary">Mary K. at San Francisco</div>
-				<div class="price">$25</div>
-			</div>
-			<div class="search-result">
-				<h4>This is an activity</h4>
-				<div class="secondary">Mary K. at San Francisco</div>
-				<div class="price">$25</div>
-			</div>
-
-
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+		<script src="js/textwrap.plugin.js"></script>
+		<script src="js/main.js"></script>
+		<script type="text/javascript" src="http://use.typekit.com/qzv2oav.js"></script>
+		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+		<link rel="stylesheet" href="css/style.css">
+		<title>Search results</title>    
+	</head>
+	<body>
+		<header>
+		<div class="header-wrap">
+			<div id="logo">Come Play Learn</div>
+			<div id="facebook-connect"></div>
+			<div id="service-list">List your activity</div>
+			<div class="clear"></div>
 		</div>
-	</div>
-	<footer>
+		</header>
+		<div class="content-body">
+			<div class="main-content">
+				<div class="command-bar-container">
+				</div>
+				<div class="two-col-left-narrow-float">
+					<div id="search-left-bar" class="panel">
+						<h4>Search results</h4>
+						<input type="text" class="shorter" /> near <input type="text" class="short" />
+						<input type="submit" value="Search Again" />
+					</div>
+					<div id="filter-bar" class="panel">
+					</div>
+					<div id="map-bar" class="panel">
+					</div>
+				</div>
+				<div class="two-col-right-wide">
+					<h2>There are 32 listings</h2>
+					<div class="search-result">
+						<img src="images/activity1.jpg">
+						<div class="price">$25</div>
+						<h4>This is an activity</h4>
+						<div class="secondary">Mary K. at San Francisco</div>
+					</div>
+					<div class="search-result">
+						<img src="images/activity1.jpg">
+						<div class="price">$25</div>
+						<h4>This is an activity</h4>
+						<div class="secondary">Mary K. at San Francisco</div>
+					</div>
+					<div class="search-result">
+						<img src="images/activity1.jpg">
+						<div class="price">$25</div>
+						<h4>This is an activity</h4>
+						<div class="secondary">Mary K. at San Francisco</div>
+					</div>
+					<div class="search-result">
+						<img src="images/activity1.jpg">
+						<div class="price">$25</div>
+						<h4>This is an activity</h4>
+						<div class="secondary">Mary K. at San Francisco</div>
+					</div>
+					<div class="search-result">
+						<img src="images/activity1.jpg">
+						<div class="price">$25</div>
+						<h4>This is an activity</h4>
+						<div class="secondary">Mary K. at San Francisco</div>
+					</div>
+					<div class="search-result">
+						<img src="images/activity1.jpg">
+						<div class="price">$25</div>
+						<h4>This is an activity</h4>
+						<div class="secondary">Mary K. at San Francisco</div>
+					</div>
+					<div class="search-result">
+						<img src="images/activity1.jpg">
+						<div class="price">$25</div>
+						<h4>This is an activity</h4>
+						<div class="secondary">Mary K. at San Francisco</div>
+					</div>
+					<div class="search-result">
+						<img src="images/activity1.jpg">
+						<div class="price">$25</div>
+						<h4>This is an activity</h4>
+						<div class="secondary">Mary K. at San Francisco</div>
+					</div>
+					<div class="search-result">
+						<img src="images/activity1.jpg">
+						<div class="price">$25</div>
+						<h4>This is an activity</h4>
+						<div class="secondary">Mary K. at San Francisco</div>
+					</div>
+					<div class="search-result">
+						<img src="images/activity1.jpg">
+						<div class="price">$25</div>
+						<h4>This is an activity</h4>
+						<div class="secondary">Mary K. at San Francisco</div>
+					</div>
+					<div class="navigation"></div>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</div>
+		<footer>
 		<div class="footer-constrain">
 			<ul class="footer-nav">
 				<li>About</li>
@@ -72,6 +110,6 @@
 			</ul>
 			<div class="copyright">© 2011 Come Play Learn</div>
 		</div>
-	</footer>
-</body>
+		</footer>
+	</body>
 </html>
