--- a/design/add_experience.html
+++ b/design/add_experience.html
@@ -22,16 +22,18 @@
 		</header>
 		<div class="content-body">
 			<div class="main-content">
-				<div class="command-bar">
-					This can be hidden if not in use
+				<div class="command-bar-container">
+					<div class="command-bar">
+						This can be hidden if not in use
+					</div>
 				</div>
-				<h1>Add listing form</h1>
 				<div class="two-col-right">
 					<h3>Welcome!</h3>
 					<p>Hamburger corned beef turkey, fatback pancetta leberkäse pork chop pork ham hock short ribs. Rump tail pork chop pork meatloaf. Beef short loin rump, capicola leberkäse drumstick chicken short ribs. Capicola jerky tail hamburger tri-tip, kielbasa sirloin brisket frankfurter swine. Shankle turducken bresaola ground round pig. Meatball sausage chuck, strip steak fatback leberkäse sirloin boudin shankle filet mignon tenderloin kielbasa. Ball tip boudin pancetta shank, leberkäse spare ribs pork chop strip steak bacon sausage swine turducken flank.</p>
 					<p>Shoulder andouille short loin chicken venison. Pork loin chicken sausage, hamburger t-bone flank beef ribs kielbasa drumstick turducken. Pastrami sausage shoulder t-bone, filet mignon prosciutto leberkäse drumstick short loin flank spare ribs meatball chicken. Short ribs ball tip short loin t-bone, drumstick boudin kielbasa capicola shankle tongue beef tri-tip. Shankle short loin frankfurter, fatback jerky pancetta bacon ham hock tenderloin leberkäse kielbasa t-bone boudin ham brisket. Meatloaf shank bacon, rump ham venison swine fatback turkey corned beef jowl brisket kielbasa. Tongue tri-tip capicola, t-bone ribeye kielbasa flank chicken brisket jerky spare ribs meatball.</p>
 				</div>
 				<div class="two-col-left">
+					<h1>Add listing form</h1>
 					<form action="#" method="POST" enctype="multipart/form-data">
 						<fieldset>
 							<h3>Describe your offering</h3>
@@ -145,7 +147,7 @@
 			</fieldset>       	
 			<p class="secondary">Capicola meatloaf t-bone, ham hock tenderloin corned beef bresaola boudin jerky. Beef venison meatball tri-tip andouille pork chop flank ham hock pork belly turducken pork loin. Ham turkey beef, sirloin hamburger meatloaf kielbasa leberkäse strip steak t-bone tenderloin meatball pork swine short ribs. Sirloin andouille brisket kielbasa pork loin, pig filet mignon ham tail pastrami pork leberkäse capicola. Corned beef pork boudin capicola. Turkey jerky ground round meatloaf. Sausage shankle ball tip shank meatball venison chicken short ribs flank beef ribs.
 			</p>
-			<input type="submit" value="View listing">
+			<input type="submit" class="margin-top-30" value="View listing">
 		</form>
 	</div>
 </div>
