--- a/design/list.html
+++ b/design/list.html
@@ -25,14 +25,20 @@
 				<div class="command-bar-container">
 				</div>
 				<div class="two-col-left-narrow-float">
-					<div id="search-left-bar" class="panel">
+					<div id="search-left-bar" class="panel dark">
 						<h4>Search results</h4>
 						<input type="text" class="shorter" /> near <input type="text" class="short" />
-						<input type="submit" value="Search Again" />
-					</div>
-					<div id="filter-bar" class="panel">
+
+						<input type="submit" class="margin-top-10" value="search again" />
 					</div>
 					<div id="map-bar" class="panel">
+						This is where the map goes
+					</div>
+					<div id="filter-bar" class="panel">
+						<h4>Filter by</h4>
+						<div><input type="checkbox" name="my_place">Option 1</div>
+						<div><input type="checkbox" name="delivery">Option 2</div>
+						<div><input type="checkbox" name="pick-up">Option 3</div>
 					</div>
 				</div>
 				<div class="two-col-right-wide">
@@ -97,7 +103,16 @@
 						<h4>This is an activity</h4>
 						<div class="secondary">Mary K. at San Francisco</div>
 					</div>
-					<div class="navigation"></div>
+					<div class="page-nav">
+						<ul>
+							<li>&lt;</li>
+							<li class="active">1</li>
+							<li>2</li> 
+							<li>3</li> 
+							<li>4</li> 
+							<li>&gt;</li>
+						</ul>
+					</div>
 				</div>
 				<div class="clear"></div>
 			</div>
