adding merchant application form with the new design

--- a/design/add_experience.html
+++ b/design/add_experience.html
@@ -23,10 +23,10 @@
 		<div class="content-body">
 			<div class="main-content">
 				<div class="command-bar-container">
-					<div class="command-bar">
+<!--					<div class="command-bar">
 						This can be hidden if not in use
 					</div>
-				</div>
+-->				</div>
 				<div class="two-col-right">
 					<h3>Welcome!</h3>
 					<p>Hamburger corned beef turkey, fatback pancetta leberkäse pork chop pork ham hock short ribs. Rump tail pork chop pork meatloaf. Beef short loin rump, capicola leberkäse drumstick chicken short ribs. Capicola jerky tail hamburger tri-tip, kielbasa sirloin brisket frankfurter swine. Shankle turducken bresaola ground round pig. Meatball sausage chuck, strip steak fatback leberkäse sirloin boudin shankle filet mignon tenderloin kielbasa. Ball tip boudin pancetta shank, leberkäse spare ribs pork chop strip steak bacon sausage swine turducken flank.</p>
@@ -41,7 +41,7 @@
 							<input class="default-val" type="text" value="Think of a name that describes your activity" maxlength="32" required="required" name="title"/>
 							<label>Description</label>
 							<p class="help-text">tell us about your cooking, the setting, yourself... anything that helps tell your story</p>
-							<textarea class="tall" id="description" required="required" name="description"></textarea>
+							<textarea class="tall" class="description" required="required" name="description"></textarea>
 						</fieldset>
 						<fieldset>
 							<h3>Tell your story visually</h3>
