small updates to daashboard. still trying to figure it out.

--- a/design/dashboard.html
+++ b/design/dashboard.html
@@ -35,22 +35,23 @@
 					<ul class="listings">
 						<li class="listing-item">
 							<h4><a href="experience_profile.html">This is the activity title</a></h4>
-							<div class="thumb">
+							
+							<div class="thumb" class="half column">
 								<a href="experience_profile.html">
 									<img src="images/activity1.jpg" class="thumb" width="150" height="100">
 								</a>
 							</div>
-							<div class="activate">
+							<div class="activate" class="half column">
 								<form>
 									<button>activate</button>
 								</form>
 							</div><!-- close activate -->
-							<div class="listing-stats">
+							<div class="listing-stats" class="half column">
 								<div>Money earned</div>
 								<div>Requests</div>
 								<div>Page views</div> 
 							</div><!-- close listing-stats -->
-							<div class="listing-actions">
+							<div class="listing-actions" class="half column">
 								<div>Edit listing</div>
 								<div>View listing</div>
 							</div>
