tweaks to dashboard. Added inbox.html. Changes to style.css

--- a/design/add_experience.html
+++ b/design/add_experience.html
@@ -23,10 +23,15 @@
 		<div class="content-body">
 			<div class="main-content">
 				<div class="command-bar-container">
-<!--					<div class="command-bar">
-						This can be hidden if not in use
+					<div class="command-bar">
+						<ul>
+							<li><a href="add_experience.html">Add new listing</a></li>
+							<li><a href="dashboard.html">View all listings</a></li>
+							<li><a href="#">Inbox</a></li>
+							<li><a href="account.html">Account</a></li>
+						</ul>			
 					</div>
--->				</div>
+				</div>
 				<div class="two-col-right">
 					<h3>Welcome!</h3>
 					<p>Hamburger corned beef turkey, fatback pancetta leberkäse pork chop pork ham hock short ribs. Rump tail pork chop pork meatloaf. Beef short loin rump, capicola leberkäse drumstick chicken short ribs. Capicola jerky tail hamburger tri-tip, kielbasa sirloin brisket frankfurter swine. Shankle turducken bresaola ground round pig. Meatball sausage chuck, strip steak fatback leberkäse sirloin boudin shankle filet mignon tenderloin kielbasa. Ball tip boudin pancetta shank, leberkäse spare ribs pork chop strip steak bacon sausage swine turducken flank.</p>
