--- a/design/dashboard.html
+++ b/design/dashboard.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript" src="http://use.typekit.com/qzv2oav.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 		<link rel="stylesheet" href="css/style.css">
-		<title>Search results</title>    
+		<title>Dashboard</title>    
 	</head>
 	<body>
 		<header>
@@ -57,7 +57,9 @@
 							<div class="listing-actions">
 								<button>edit</button>
 								<button>view</button>
-								<button>activate</button>
+								<!--<form action="#" method="POST" enctype="multipart/form-data">-->
+									<button>activate</button>
+								<!--</form>-->
 							</div>
 						</li>
 					</ul>	
