--- a/design/login.html
+++ b/design/login.html
@@ -38,27 +38,25 @@
 					<p>Shoulder andouille short loin chicken venison. Pork loin chicken sausage, hamburger t-bone flank beef ribs kielbasa drumstick turducken. Pastrami sausage shoulder t-bone, filet mignon prosciutto leberkäse drumstick short loin flank spare ribs meatball chicken. Short ribs ball tip short loin t-bone, drumstick boudin kielbasa capicola shankle tongue beef tri-tip. Shankle short loin frankfurter, fatback jerky pancetta bacon ham hock tenderloin leberkäse kielbasa t-bone boudin ham brisket. Meatloaf shank bacon, rump ham venison swine fatback turkey corned beef jowl brisket kielbasa. Tongue tri-tip capicola, t-bone ribeye kielbasa flank chicken brisket jerky spare ribs meatball.</p>
 				</div>-->
 				<div class="two-col-left">
-					<h1>Create an account</h1>
+					<h1>Sign into your account</h1>
 					<form action="#" method="POST" enctype="multipart/form-data">
 						<fieldset>
+							<!--<h3>Log in with Facebook</h3>-->
                             <div id="facebook-connect-large"></div>
-                            <p class="help-text" style="margin-top: 10px;">It's the fastest and easiest way to create an account. We'll NEVER post without your permission.</p>						
                         </fieldset>
                         <fieldset>
-							<h3>Or sign-up with your email</h3>
-							<label>Name</label>
-                            <input type="text" class="medium" name="name"/>
-                            <label>Email</label>
-                            <input type="text" class="medium" name="email"/>
+							<h3>Or sign-in with your email</h3>
+							<label>Email</label>
+							<input type="text" name="email"/>
                             <label>Password</label>
-                            <input type="password" class="medium" name="password"/>
-                            <label>Confirm password</label>
-                            <input type="password" class="medium" name="confirm-password"/>
+                            <input type="password" name="password"/>
                         </fieldset>
                         <fieldset>
-                            <p class="help-text">By clicking Register you confirm that you accept our <a href="terms.html">Terms of Use.</a></p>						
                             <input type="submit" class="margin-top-30" value="Register">
-                            <input class="inp-checkbox" type="checkbox" name="remember-me"/> Remember me next time  
+                            <input class="inp-checkbox" type="checkbox" name="remember-me" /> Remember me next time  
+                        </fieldset>
+						<fieldset>
+							<h3>Need to register? <a href="register.html">sign up now</a>
                         </fieldset>
                     </form>
                 </div><!-- close two-col-left -->
