--- a/design/login.html
+++ b/design/login.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="http://use.typekit.com/qzv2oav.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 		<link rel="stylesheet" href="css/style.css">
-		<title>Register</title>    
+		<title>Login</title>    
 	</head>
 	<body>
 		<header>
@@ -45,7 +45,7 @@
                             <div id="facebook-connect-large"></div>
                         </fieldset>
                         <fieldset>
-							<h3>Or sign-in with your email</h3>
+							<h3>Or log-in with your email</h3>
 							<label>Email</label>
 							<input type="text" name="email"/>
                             <label>Password</label>
